--- a/oxxo/scss/style.scss
+++ b/oxxo/scss/style.scss
@@ -16,28 +16,6 @@ $extra-small: 368px;
   justify-content: $jc;
   align-items: $ai;
 }
-@mixin respond-to($media) {
-  @if $media == wide-screens {
-    @media only screen and (min-width: $large) {
-      @content;
-    }
-  } @else
-  if $media == medium-screens {
-    @media only screen and (min-width: $medium + 1) and (max-width: $large - 1) {
-      @content;
-    }
-  } @else
-  if $media == handhelds {
-    @media only screen and (min-width: $small + 1) and (max-width: $medium - 1) {
-      @content;
-    }
-  } @else
-  if $media == extra-small {
-    @media only screen and (min-width: $extra-small + 1) and (max-width: $small - 1) {
-      @content;
-    }
-  }
-}
 
 body,
 html {
@@ -268,6 +246,15 @@ ul {
     }
   }
 
+  .hamburger-menu {
+    color: #fff;
+    cursor: pointer;
+    font-size: 2em;
+    text-align: right;
+    margin-right: 1rem;
+    display: none;
+  }
+
   .header-greeting {
     @include dflex (center, center);
     flex-direction: column;
@@ -449,10 +436,10 @@ ul {
           .team-item__scnetw {
             @include dflex (center, center);
             border-radius: 50%;
-            width: 2.5em;
-            height: 2.5em;
+            min-width: 2.5em;
+            min-height: 2.5em;
             background-color: #f0f0f0;
-            margin-right: 1.3em;
+            margin-right: 1em;
             transition: 0.3s;
 
             &:last-child {
@@ -512,8 +499,8 @@ ul {
 
           .icon-container {
             @include dflex (center, center);
-            width: 50px;
-            height: 50px;
+            min-width: 50px;
+            min-height: 50px;
             border: 3px solid #f0f0f0;
             border-radius: 50%;
             margin-right: 20px;
@@ -701,6 +688,7 @@ ul {
             opacity: 0;
             border-radius: 6px;
             transition: opacity 0.3s;
+            z-index: 10;
 
             .tooltiptext__company {
               display: block;
@@ -750,8 +738,7 @@ ul {
 .howwedo {
   .wrapper {
     .howwedo-content {
-      @include dflex (space-around, center);
-      padding-bottom: 5rem;
+      @include dflex (space-around, flex-start);
 
       .howwedo-content__picture {
         width: 40%;
@@ -767,8 +754,8 @@ ul {
 
           .howwedo-icon-bg {
             @include dflex (center, center);
-            width: 65px;
-            height: 65px;
+            min-width: 4em;
+            min-height: 4em;
             background-color: $secondary-color;
             border-radius: 50%;
             margin-right: 1rem;
@@ -875,12 +862,13 @@ ul {
           .contact-info__social {
             @include dflex (space-around, center);
             margin-top: 1em;
+            width: 90%;
 
             .contact-info__icon {
               @include dflex (center, center);
-              font-size: 1em;
-              width: 2.5em;
-              height: 2.5em;
+              // font-size: 1em;
+              min-width: 2em;
+              min-height: 2em;
               border: 1px solid $white-color;
               border-radius: 50%;
               cursor: pointer;
@@ -943,8 +931,8 @@ ul {
               text-transform: capitalize;
 
               .i-container {
-                width: 1.5rem;
-                height: 1.5rem;
+                min-width: 1.5em;
+                min-height: 1.5em;
                 background-color: $secondary-color;
                 border-radius: 50%;
                 @include dflex (center, center);
@@ -985,7 +973,8 @@ ul {
           flex-direction: column;
 
           .formcontrol {
-            width: 90%;
+            box-sizing: border-box;
+            width: 100%;
             border-radius: 3px;
             border: 1px solid #acabab;
             padding: 10px 0 10px 10px;
@@ -1082,22 +1071,33 @@ footer {
 // $medium2: 768px;
 // $small: 576px;
 // $extra-small: 312px;
-@media (max-width: $medium) {
-  .header {
-    height: auto;
-    padding-bottom: 3rem;
-
-    .header__nav {
-      display: none;
-    }
-
-    .header-greeting {
-      .header-greeting__btn {
-        font-size: 1.5em;
+@media (max-width: $large) {
+  .tooltip-clients {
+    .wrapper {
+      .tooltip-clients__content {
+        .tooltip-clients__item {
+          width: 100px;
+          margin-right: 3rem;
+          img {
+            width: 100%;
+          }
+          .tooltip {
+            .tooltiptext {
+              width: 120px;
+              padding: 5px 0;
+              margin-left: -120px;
+              transform: translateY(10px);
+            }
+          }
+          &:last-child {
+            margin-right: 0;
+          }
+        }
       }
     }
   }
-
+}
+@media (max-width: $medium) {
   .section {
     .wrapper {
       .section__title {
@@ -1112,6 +1112,138 @@ footer {
 
           span {
             font-size: 1em;
+          }
+        }
+      }
+    }
+  }
+
+  .header {
+    height: 75vh;
+    padding-bottom: 3rem;
+
+    .header__nav {
+      display: none;
+    }
+
+    .hamburger-menu {
+      display: block;
+    }
+
+    .header-greeting {
+      .header-greeting__btn {
+        font-size: 1em;
+      }
+    }
+  }
+
+  .team {
+    .wrapper {
+      .team__list {
+        flex-wrap: wrap;
+
+        .team-item {
+          margin: 1.5rem 0;
+          width: 45%;
+
+          .team-item__photo {
+            width: 50%;
+          }
+
+          .team-item__name {
+            .team-item__post {}
+          }
+
+          .team-item__description {
+            width: 85%;
+          }
+
+          .team-item__social {
+            width: 85%;
+            // justify-content: space-between;
+            .team-item__scnetw {
+              .team-item__link {
+                font-size: 0.75em;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .portfolio {
+    .wrapper {
+      .portfolio-content {
+        .portfolio-content__item {
+          height: 100px;
+          .portfolio-content__icons {
+            top: 50%;
+            margin-top: -1.5rem;
+            .icon-container {
+              min-width: 3rem;
+              min-height: 3rem;
+            }
+          }
+          &:hover {
+            .portfolio-content__description {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .tooltip-clients {
+    display: none;
+  }
+
+  .howwedo {
+    .wrapper {
+      .howwedo-content {
+        .howwedo-content__picture {
+          display: none;
+        }
+
+        .howwedo-content__list {
+          width: 100%;
+
+          .howwedo-content__item {
+            width: 100%;
+
+            .howwedo-icon-bg {
+              margin-right: 2rem;
+            }
+
+            .howwedo-content__container {
+              .howwedo-content__text {
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .contacts {
+    .wrapper {
+      .contacts-content {
+        .contacts-content__item {
+          width: 30%;
+
+          &.posts {
+            display: none;
+          }
+
+          &.form {
+            .contacts-form {
+              .contacts-form__button {
+                display: block;
+                width: 100%;
+              }
+            }
           }
         }
       }
@@ -1167,12 +1299,13 @@ footer {
 
         .about-content__text {
           width: 90%;
-        }
 
-        .about-content__buttons {
-          .about-btn {
-            margin-top: 1rem;
-            display: block;
+          .about-content__buttons {
+            .about-btn {
+              display: block;
+              margin-top: 1rem;
+              margin-right: 0;
+            }
           }
         }
       }
@@ -1201,11 +1334,76 @@ footer {
       }
     }
   }
+
+  .contacts {
+    .wrapper {
+      .contacts-content {
+        .contacts-content__item {
+          font-size: 0.8em;
+
+          &.info {
+            .contact-info {
+              .contact-info__subtitle {
+                font-size: 0.8em;
+              }
+
+              .contact-info__adress,
+              .contact-info__adress,
+              .contact-info__mail,
+              .contact-info__phone {
+                span {
+                  font-size: 0.8em;
+                }
+              }
+
+              .contact-info__social {
+                .contact-info__icon {
+                  font-size: 1em;
+
+                  .contact-info__link {
+                    font-size: 1em;
+                  }
+                }
+              }
+            }
+          }
+
+          &.services {
+            .service-content {
+              .service-content__item {
+                .service-content__title {
+                  font-size: 0.9em;
+                  .i-container {
+                    i {
+                      font-size: 0.7em;
+                    }
+                  }
+                }
+                .service-content__subtitle {
+                  p {
+                    font-size: 0.8em;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media (max-width: $small) {
   .header {
+    height: 50vh;
     .header-greeting {
       font-size: 0.5em;
+      .header-greeting__subtitle {
+        word-break: keep-all;
+        text-align: center;
+      }
+      .header-greeting__btn {
+        font-size: 1.5em;
+      }
     }
   }
 
@@ -1227,6 +1425,86 @@ footer {
       }
     }
   }
+
+  .team {
+    .wrapper {
+      .team__list {
+        .team-item {
+          @include dflex(center, center);
+          width: 100%;
+
+          .team-item__photo {
+            width: 50%;
+          }
+
+          .team-item__name {
+            .team-item__post {}
+          }
+
+          .team-item__description {
+            width: 100%;
+          }
+
+          .team-item__social {
+            width: 100%;
+
+            .team-item__scnetw {
+              .team-item__link {
+                font-size: 0.75em;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .portfolio {
+    display: none;
+  }
+
+  .clients {
+    .wrapper {
+      .clients-content {
+        font-size: 0.75em;
+        width: 100%;
+
+        .clients-content__text {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .tooltip-clients {
+    display: none;
+  }
+
+  .contacts {
+    .wrapper {
+      .contacts-content {
+        .contacts-content__item {
+          width: 45%;
+          &.form {
+            display: none;
+          }
+          &.info {
+            .contact-info__social {
+              .contact-info__icon {
+                min-width: 1.5rem;
+                min-height: 1.5rem;
+                .contact-info__link {
+                  i {
+                    font-size: 0.8em;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @media (max-width: $extra-small) {
   .buy {
@@ -1235,8 +1513,51 @@ footer {
         .buy-controls__btn {
           display: block;
           margin-top: 1rem;
+
           &:first-child {
             margin: 0;
+          }
+        }
+      }
+    }
+  }
+
+  .howwedo {
+    .wrapper {
+      .howwedo-content {
+        .howwedo-content__list {
+          .howwedo-content__item {
+            .howwedo-icon-bg {
+              display: none;
+            }
+
+            .howwedo-content__container {
+              text-align: justify;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .contacts {
+    .wrapper {
+      .contacts-content {
+        .contacts-content__item {
+          width: 100%;
+          text-align: center;
+          &.services {
+            display: none;
+          }
+          &.info {
+            .contact-info {
+              .contact-info__item {
+                width: 100%;
+              }
+              .contact-info__social {
+                width: 100%;
+              }
+            }
           }
         }
       }
