--- a/oxxo/scss/style.scss
+++ b/oxxo/scss/style.scss
@@ -63,6 +63,7 @@ ul {
   border-radius: 50%;
   cursor: pointer;
   z-index: 99;
+
   i {
     font-size: 2em;
     color: $white-color;
@@ -74,7 +75,7 @@ ul {
   text-transform: uppercase;
   color: $white-color;
   border: 1px solid $white-color;
-  border-radius: 5px;
+  // border-radius: 5px;
   transition: 0.3s;
 
   &:hover {
@@ -126,6 +127,7 @@ ul {
 
 .header {
   height: 100vh;
+  width: 100%;
   @include bg-img("../img/background.png");
   border-top: 3px solid $secondary-color;
   border-bottom: 3px solid $secondary-color;
@@ -304,39 +306,98 @@ ul {
     }
   }
 
-  .header-greeting {
-    @include dflex (center, center);
-    flex-direction: column;
-    margin-top: 6em;
+  .header-slider {
+    position: relative;
+    width: 90%;
+    // margin: 6em auto 0;
+    margin: 1rem auto;
 
-    .header-greeting__title {
+    .slickArrow {
+      background: none;
+      border: none;
       color: $white-color;
-      text-transform: uppercase;
-      font-weight: 600;
       font-size: 5em;
-    }
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-3.5rem);
+      z-index: 99;
 
-    .header-greeting__subtitle {
-      color: $white-color;
-      @include dflex (center, center);
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 1.5em;
-
-      i {
-        margin: 0 2em;
-        font-size: 0.3rem;
+      &.prevArrowBtn {
+        left: 0;
       }
 
-      span {
-        font-size: inherit;
-        font-weight: 600;
-        color: $secondary-color;
+      &.nextArrowBtn {
+        right: 0;
       }
     }
 
-    .header-greeting__btn {
-      margin-top: 3rem;
+    .header-slider__item {
+      .header-greeting {
+        @include dflex (center, center);
+        flex-direction: column;
+        width: 100%;
+
+        .header-greeting__title {
+          color: $white-color;
+          text-transform: uppercase;
+          font-weight: 600;
+          font-size: 5em;
+        }
+
+        .header-greeting__subtitle {
+          color: $white-color;
+          @include dflex (center, center);
+          text-transform: uppercase;
+          font-weight: 600;
+          font-size: 1.5em;
+
+          i {
+            margin: 0 2em;
+            font-size: 0.3rem;
+          }
+
+          span {
+            font-size: inherit;
+            font-weight: 600;
+            color: $secondary-color;
+          }
+        }
+
+        .header-greeting__btn {
+          margin-top: 3rem;
+        }
+      }
+
+      .service-list {
+        margin-top: 5rem;
+
+        .service-list__controls {
+          @include dflex (center, center);
+
+          .btn {
+            margin-right: 5rem;
+            text-align: center;
+
+            &:hover {
+              background-color: $white-color;
+              border: 1px solid $white-color;
+              color: #000;
+            }
+
+            &:last-child {
+              margin-right: 0;
+            }
+          }
+        }
+
+        p {
+          margin-top: 3rem;
+          text-align: center;
+          color: $white-color;
+        }
+        width: 100%;
+      }
     }
   }
 }
@@ -349,7 +410,6 @@ ul {
       .about-content__img {
         width: 45%;
         // box-shadow: 0 15px 15px 5px $primary-color;
-
         img {
           object-fit: cover;
           width: 100%;
@@ -1186,7 +1246,6 @@ footer {
   }
 
   .header {
-    height: 75vh;
     padding-bottom: 3rem;
 
     .header__nav {
@@ -1197,9 +1256,16 @@ footer {
       display: block;
     }
 
-    .header-greeting {
-      .header-greeting__btn {
-        font-size: 1em;
+    .header-slider {
+      .slickArrow {
+        font-size: 3em;
+      }
+      .header-slider__item {
+        .header-greeting {
+          .header-greeting__btn {
+            font-size: 1em;
+          }
+        }
       }
     }
   }
@@ -1368,6 +1434,25 @@ footer {
         }
       }
     }
+
+    .header-slider {
+      .header-slider__item {
+        .header-greeting {
+          margin-top: 5rem;
+          font-size: 0.75em;
+        }
+        .service-list {
+          .service-list__controls {
+            @include dflex(flex-start, center);
+            flex-direction: column;
+            .btn {
+              margin: 0.5rem 0;
+              width: 10rem;
+            }
+          }
+        }
+      }
+    }
   }
 
   .about {
@@ -1480,18 +1565,32 @@ footer {
 }
 @media (max-width: $small) {
   .header {
-    .header-greeting {
-      font-size: 0.5em;
+    .header-slider {
+      .header-slider__item {
+        .header-greeting {
+          font-size: 0.6em;
+          text-align: center;
 
-      .header-greeting__subtitle {
-        word-break: keep-all;
-        text-align: center;
-      }
+          .header-greeting__subtitle {
+            word-break: keep-all;
+            text-align: center;
+          }
 
-      .header-greeting__btn {
-        font-size: 1.5em;
+          .header-greeting__btn {
+            font-size: 1.5em;
+          }
+        }
+        .service-list {
+          .service-list__controls {
+            .btn {
+              width: 7rem;
+            }
+          }
+        }
       }
     }
+
+
   }
 
   .amazing {
