--- a/oxxo/scss/style.scss
+++ b/oxxo/scss/style.scss
@@ -128,6 +128,7 @@ ul {
 .header {
   height: 100vh;
   width: 100%;
+  padding-bottom: 3rem;
   @include bg-img("../img/background.png");
   border-top: 3px solid $secondary-color;
   border-bottom: 3px solid $secondary-color;
@@ -309,8 +310,7 @@ ul {
   .header-slider {
     position: relative;
     width: 90%;
-    // margin: 6em auto 0;
-    margin: 1rem auto;
+    margin: 6rem auto 0;
 
     .slickArrow {
       background: none;
@@ -1260,6 +1260,7 @@ footer {
       .slickArrow {
         font-size: 3em;
       }
+
       .header-slider__item {
         .header-greeting {
           .header-greeting__btn {
@@ -1436,15 +1437,18 @@ footer {
     }
 
     .header-slider {
+      margin: 2rem auto 0;
       .header-slider__item {
         .header-greeting {
           margin-top: 5rem;
           font-size: 0.75em;
         }
+
         .service-list {
           .service-list__controls {
             @include dflex(flex-start, center);
             flex-direction: column;
+
             .btn {
               margin: 0.5rem 0;
               width: 10rem;
@@ -1580,6 +1584,7 @@ footer {
             font-size: 1.5em;
           }
         }
+
         .service-list {
           .service-list__controls {
             .btn {
@@ -1589,8 +1594,6 @@ footer {
         }
       }
     }
-
-
   }
 
   .amazing {
